# groundwork

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CURATED.md  Cargo.toml  PROJECT.md  README.md  WORKFLOW.md  agents.toml  groundwork.toml  manifest.toml  workflow-core.md
.claude/: .sk-state.json
.claude/skills/: completion-land  decomposition-issue-craft  decomposition-planning  foundation-ground  foundation-research  specification-bdd
.github/workflows/: code-review.yml
assets/logo/: README.md  generate.py
crates/groundwork-cli/: Cargo.toml
crates/groundwork-cli/src/: main.rs
crates/groundwork-cli/tests/: artifact_frontmatter_schema.rs  behavior_contract_schema.rs  completion_evidence_schema.rs  completion_record_schema.rs  frontmatter_schema.rs  implementation_plan_schema.rs  research_record_schema.rs  test_evidence_schema.rs
crates/groundwork-cli/tests/common/: mod.rs
docs/: PRINCIPLES.md
docs/architecture/: issue-model.md  (+5 more)
manifests/: curation.v1.toml
schemas/: README.md  artifact-frontmatter.schema.json  assessment.schema.json  behavior-contract.schema.json  claim.schema.json  completion-evidence.schema.json  completion-record.schema.json  documentation-record.schema.json  groundwork-frontmatter.schema.json  implementation-plan.schema.json  issue.schema.json  patch.schema.json  request.schema.json  requirements.schema.json  research-record.schema.json  test-evidence.schema.json  work-unit.schema.json
skills/: skills.toml
tests/: test_request_schema_vendoring.py  test_submit_protocol.py
(+125 files in other folders)
