[package]
name = "groundwork-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Groundwork installer CLI"

[[bin]]
name = "groundwork"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3"
