[package]
name = "groundwork-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Groundwork installer CLI"

[[bin]]
name = "groundwork"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
sha2 = "0.10"

[dev-dependencies]
jsonschema = "0.44"
serde_json = "1"
serde_yml = "0.0.12"
tempfile = "3"
